--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "name": "Rick Osborne",
     "url": "https://rickosborne.org"
   },
+  "bin": {
+    "firestore-sync": "dist/ts/bin/firestore-sync.js"
+  },
   "bugs": {
     "url": "https://github.com/rickosborne/firestore-sync/issues"
   },
   "dependencies": {
+    "arg": "^4.1.0",
     "firebase-admin": "^8.0.0"
   },
   "description": "Sync local seed data with Google Firestore",
