--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "url": "https://github.com/rickosborne/firestore-sync/issues"
   },
   "dependencies": {
+    "@types/punycode": "^2.1.0",
     "arg": "^4.1.0",
-    "firebase-admin": "^8.0.0"
+    "firebase-admin": "^8.0.0",
+    "punycode": "^2.1.1"
   },
   "description": "Sync local seed data with Google Firestore",
   "devDependencies": {
